overflow fixed

--- a/src/components/Intro/Name.scss
+++ b/src/components/Intro/Name.scss
@@ -2,7 +2,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Infant:ital,wght@0,300;0,600;1,400&family=Cormorant:wght@300&family=Gothic+A1:wght@100;300;400;500&family=Hanken+Grotesk:wght@100&display=swap');
 
 .container{
-    overflow-x:hidden;
     width:100%
 }
 .title{
